[package]
name = "savings-vault"
version = "0.1.0"
edition = "2021"
description = "A Stellar Soroban savings vault contract for PocketPay mobile wallet"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1"
